--- a/block-BJaakg/code/index.html
+++ b/block-BJaakg/code/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>List Of Got Books.</header>
+    <header>
+      <h1>List Of GOT Books</h1>
+    </header>
     <section>
       <div class="container">
         <ul></ul>
@@ -17,6 +19,6 @@
         </div>
       </div>
     </section>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
